# polypgf

./: .coverage  .gitignore  README.md  pyproject.tolm  pyproject.toml  requieriments-dev.txt  requieriments.txt  tox.ini
.tox/py313/: .tox-info.json
polypgf/: __init__.py
polypgf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
polypgf/inversions/: inversions.py
polypgf/kinetic_constants/: __init__.py  kinetic_arrhenius.py  kinetic_isothermal.py
polypgf/models/: basic_model.py  velocity_laws.py
polypgf/thermo/: ideal_solution.py
tests/: test_kinetics.py
